--- a/Shop/Shop.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/Shop/Shop.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -4,8 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/Admin.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/jquery-1.7.1.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery-3.4.1.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <title></title>
 </head>
@@ -15,7 +15,7 @@
         {
             <div class="Message">@TempData["message"]</div>
         }
-        @RenderBody();
+        @RenderBody()
     </div>
 </body>
 </html>
