--- a/Shop/Shop.WebUI/Views/Account/Login.cshtml
+++ b/Shop/Shop.WebUI/Views/Account/Login.cshtml
@@ -13,6 +13,6 @@
 {
     @Html.ValidationSummary(true)
     @Html.EditorForModel()
-    <p><input type="submit" value="Log in"/></p> 
-}
+     <p><input type="submit" value="Log in" /> @Html.ActionLink("Регистрация", "Register")</p> 
+} 
 
